2010-06-13  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.6
	* Clearing demuxers on channel stream destroy
	* Added signal strength column to scan dialog
	* Added rename option to channel conflict actions
	* Added repeat option for channel conflict

2010-06-12  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.5
	* Fixed EPG event dialog not updating due to unencoded XML
	* Fixed crash bug on right-click channel record
	* Added LT scan range
	* Volume icon is now context sensitive
	* Now stopping/starting frontend thread when modifying streams
	* FrontendThread now polls for data

2010-05-15  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.4
	* Right-click on EPG events toggles record
	* Right-click on rows in the EPG event search dialag toggles record
	* Shutdown after record implemented

2010-05-11  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.3
	* Fixed crash at startup
	* Added US autoscan range

2010-05-08  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.2
	* Switched to a DBus style screensaver inhibitor
	* Removed --device option from command line
	* Added mutex to FrontendThread loop
	* Switched FrontendThreadList and ChannelStreamList to be pointer based
	* Updating record action state on application update

2010-05-01  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.1
	* Multi-device support
	* Recurring scheduled recordings reimplemented
	* After recording feature implemented

2010-04-05  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.2.0
	* Added auto scan feature
	* Added EPG event search feature
	* Added x11 link (LP: #517778)

2010-01-22  Michael Lamothe <michael.lamothe@gmail.com>

	* 1.1.6
	* Application class not inheriting from Gtk::Main (LP: #509029)
	* Fixed Exception: Read timeout at me-tv startup (Clear QAM) (LP: #509040)
	* Fix for uninitialised version_number in ATSC EIS parser (LP: #509515)
	* Fix for inefficient polling of EPG data (LP: #509091)
	* Default demuxer timeout set to 5 seconds