@@ -5,6 +5,8 @@
 	* Added signal strength column to scan dialog
 	* Added rename option to channel conflict actions
 	* Added repeat option for channel conflict
+	* Added command line option for no screensaver inhibit
+	* Put comnmand line parse in try/catch so command line errors get reported
 
 2010-06-12  Michael Lamothe <michael.lamothe@gmail.com>
 
